// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiStepModal calls onClose when close button is clicked 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="modalOverlay"
    >
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 MultiStepModal__ModalWrapper-sc-6pnbfq-0 ggNseI ckFvxY dcdQsp"
        role="dialog"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 MultiStepModal__ModalInnerWrapper-sc-6pnbfq-1 escqfF RZCXS"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 MultiStepModal__ModalInnerWrapper2-sc-6pnbfq-2 escqfF hGvFTM"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 fkPDbt ckFvxY leZDxE"
            >
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 MultiStepModal__ModalTitleBarWrapper-sc-6pnbfq-3 escqfF ckFvxY fgQdBx"
              >
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 MultiStepModal__ModalTitleBarInnerWrapper-sc-6pnbfq-4 escqfF ikNXUV"
                >
                  <div
                    class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 MultiStepModal__ModalTitleBarInnerWrapper2-sc-6pnbfq-5 escqfF ckFvxY leZDxE bfalLe"
                  >
                    <div
                      class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 MultiStepModal__ModalTitle-sc-6pnbfq-6 escqfF ckFvxY leZDxE jxHYcr"
                    >
                      <div
                        class="CombinedStyling__Div-sc-c3jdxk-0 escqfF"
                      >
                        Step 1
                      </div>
                    </div>
                  </div>
                  <div
                    class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 MultiStepModal__ModalCloseWrapper-sc-6pnbfq-7 escqfF ckFvxY leZDxE hybUzG"
                  >
                    <div
                      class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 MultiStepModal__ModalClose-sc-6pnbfq-8 escqfF ckFvxY leZDxE ewSIdU"
                    >
                      <button
                        aria-label="Close"
                        class="MultiStepModal__ModalCloseButton-sc-6pnbfq-9 lkynQQ"
                        title="Close"
                      >
                        <div
                          class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 cVKKpS ckFvxY"
                        >
                          <svg
                            class="MultiStepModal__CloseButton-sc-6pnbfq-10 dJxnvt"
                            data-testid="close-x"
                          />
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 MultiStepModal__ModalContentWrapper-sc-6pnbfq-11 hEaoMW ckFvxY leZDxE hqHNJt"
              >
                <div
                  data-testid="step-content"
                >
                  Step Content
                </div>
              </div>
            </div>
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 MultiStepModal__ModalFooter-sc-6pnbfq-13 escqfF ckFvxY fjNDtr jPRLnb"
            >
              <svg
                class="MultiStepModal__PrevButton-sc-6pnbfq-14 ivKVTj"
                data-testid="back-arrow"
              />
              <a
                data-testid="styled-link"
              >
                Next
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div />
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`MultiStepModal calls onNext and onPrev when footer buttons are clicked 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="modalOverlay"
    >
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 MultiStepModal__ModalWrapper-sc-6pnbfq-0 ggNseI ckFvxY dcdQsp"
        role="dialog"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 MultiStepModal__ModalInnerWrapper-sc-6pnbfq-1 escqfF RZCXS"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 MultiStepModal__ModalInnerWrapper2-sc-6pnbfq-2 escqfF hGvFTM"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 fkPDbt ckFvxY leZDxE"
            >
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 MultiStepModal__ModalTitleBarWrapper-sc-6pnbfq-3 escqfF ckFvxY fgQdBx"
              >
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 MultiStepModal__ModalTitleBarInnerWrapper-sc-6pnbfq-4 escqfF ikNXUV"
                >
                  <div
                    class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 MultiStepModal__ModalTitleBarInnerWrapper2-sc-6pnbfq-5 escqfF ckFvxY leZDxE bfalLe"
                  >
                    <div
                      class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 MultiStepModal__ModalTitle-sc-6pnbfq-6 escqfF ckFvxY leZDxE jxHYcr"
                    >
                      <div
                        class="CombinedStyling__Div-sc-c3jdxk-0 escqfF"
                      >
                        Step 1
                      </div>
                    </div>
                  </div>
                  <div
                    class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 MultiStepModal__ModalCloseWrapper-sc-6pnbfq-7 escqfF ckFvxY leZDxE hybUzG"
                  >
                    <div
                      class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 MultiStepModal__ModalClose-sc-6pnbfq-8 escqfF ckFvxY leZDxE ewSIdU"
                    >
                      <button
                        aria-label="Close"
                        class="MultiStepModal__ModalCloseButton-sc-6pnbfq-9 lkynQQ"
                        title="Close"
                      >
                        <div
                          class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 cVKKpS ckFvxY"
                        >
                          <svg
                            class="MultiStepModal__CloseButton-sc-6pnbfq-10 dJxnvt"
                            data-testid="close-x"
                          />
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 MultiStepModal__ModalContentWrapper-sc-6pnbfq-11 hEaoMW ckFvxY leZDxE hqHNJt"
              >
                <div
                  data-testid="step-content"
                >
                  Step Content
                </div>
              </div>
            </div>
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 MultiStepModal__ModalFooter-sc-6pnbfq-13 escqfF ckFvxY fjNDtr jPRLnb"
            >
              <svg
                class="MultiStepModal__PrevButton-sc-6pnbfq-14 ivKVTj"
                data-testid="back-arrow"
              />
              <a
                data-testid="styled-link"
              >
                Next
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div />
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`MultiStepModal hides header if hideHeader is true 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="modalOverlay"
    >
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 MultiStepModal__ModalWrapper-sc-6pnbfq-0 ggNseI ckFvxY dcdQsp"
        role="dialog"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 MultiStepModal__ModalInnerWrapper-sc-6pnbfq-1 escqfF RZCXS"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 MultiStepModal__ModalInnerWrapper2-sc-6pnbfq-2 escqfF hGvFTM"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 fkPDbt ckFvxY leZDxE"
            >
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 MultiStepModal__ModalContentWrapper-sc-6pnbfq-11 hEaoMW ckFvxY leZDxE hqHNJt"
              >
                <div
                  data-testid="step-content"
                >
                  Step Content
                </div>
              </div>
            </div>
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 MultiStepModal__ModalFooter-sc-6pnbfq-13 escqfF ckFvxY fjNDtr jPRLnb"
            >
              <svg
                class="MultiStepModal__PrevButton-sc-6pnbfq-14 ivKVTj"
                data-testid="back-arrow"
              />
              <a
                data-testid="styled-link"
              >
                Next
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div />
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`MultiStepModal renders modal with title, content, and footer 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="modalOverlay"
    >
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 MultiStepModal__ModalWrapper-sc-6pnbfq-0 ggNseI ckFvxY dcdQsp"
        role="dialog"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 MultiStepModal__ModalInnerWrapper-sc-6pnbfq-1 escqfF RZCXS"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 MultiStepModal__ModalInnerWrapper2-sc-6pnbfq-2 escqfF hGvFTM"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 fkPDbt ckFvxY leZDxE"
            >
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 MultiStepModal__ModalTitleBarWrapper-sc-6pnbfq-3 escqfF ckFvxY fgQdBx"
              >
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 MultiStepModal__ModalTitleBarInnerWrapper-sc-6pnbfq-4 escqfF ikNXUV"
                >
                  <div
                    class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 MultiStepModal__ModalTitleBarInnerWrapper2-sc-6pnbfq-5 escqfF ckFvxY leZDxE bfalLe"
                  >
                    <div
                      class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 MultiStepModal__ModalTitle-sc-6pnbfq-6 escqfF ckFvxY leZDxE jxHYcr"
                    >
                      <div
                        class="CombinedStyling__Div-sc-c3jdxk-0 escqfF"
                      >
                        Step 1
                      </div>
                    </div>
                  </div>
                  <div
                    class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 MultiStepModal__ModalCloseWrapper-sc-6pnbfq-7 escqfF ckFvxY leZDxE hybUzG"
                  >
                    <div
                      class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 MultiStepModal__ModalClose-sc-6pnbfq-8 escqfF ckFvxY leZDxE ewSIdU"
                    >
                      <button
                        aria-label="Close"
                        class="MultiStepModal__ModalCloseButton-sc-6pnbfq-9 lkynQQ"
                        title="Close"
                      >
                        <div
                          class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 cVKKpS ckFvxY"
                        >
                          <svg
                            class="MultiStepModal__CloseButton-sc-6pnbfq-10 dJxnvt"
                            data-testid="close-x"
                          />
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 MultiStepModal__ModalContentWrapper-sc-6pnbfq-11 hEaoMW ckFvxY leZDxE hqHNJt"
              >
                <div
                  data-testid="step-content"
                >
                  Step Content
                </div>
              </div>
            </div>
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 MultiStepModal__ModalFooter-sc-6pnbfq-13 escqfF ckFvxY fjNDtr jPRLnb"
            >
              <svg
                class="MultiStepModal__PrevButton-sc-6pnbfq-14 ivKVTj"
                data-testid="back-arrow"
              />
              <a
                data-testid="styled-link"
              >
                Next
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div />
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`MultiStepModal shows loading animation and hides content when showLoadingAnimation is true 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="modalOverlay"
    >
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 MultiStepModal__ModalWrapper-sc-6pnbfq-0 ggNseI ckFvxY dcdQsp"
        role="dialog"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 MultiStepModal__ModalInnerWrapper-sc-6pnbfq-1 escqfF RZCXS"
        >
          <div
            class="CombinedStyling__Div-sc-c3jdxk-0 MultiStepModal__ModalInnerWrapper2-sc-6pnbfq-2 escqfF hGvFTM"
          >
            <div
              class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 fkPDbt ckFvxY leZDxE"
            >
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 MultiStepModal__ModalTitleBarWrapper-sc-6pnbfq-3 escqfF ckFvxY fgQdBx"
              >
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 MultiStepModal__ModalTitleBarInnerWrapper-sc-6pnbfq-4 escqfF ikNXUV"
                >
                  <div
                    class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 MultiStepModal__ModalTitleBarInnerWrapper2-sc-6pnbfq-5 escqfF ckFvxY leZDxE bfalLe"
                  >
                    <div
                      class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 MultiStepModal__ModalTitle-sc-6pnbfq-6 escqfF ckFvxY leZDxE jxHYcr"
                    >
                      <div
                        class="CombinedStyling__Div-sc-c3jdxk-0 escqfF"
                      >
                        Step 1
                      </div>
                    </div>
                  </div>
                  <div
                    class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 MultiStepModal__ModalCloseWrapper-sc-6pnbfq-7 escqfF ckFvxY leZDxE hybUzG"
                  >
                    <div
                      class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 MultiStepModal__ModalClose-sc-6pnbfq-8 escqfF ckFvxY leZDxE ewSIdU"
                    >
                      <button
                        aria-label="Close"
                        class="MultiStepModal__ModalCloseButton-sc-6pnbfq-9 lkynQQ"
                        title="Close"
                      >
                        <div
                          class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 cVKKpS ckFvxY"
                        >
                          <svg
                            class="MultiStepModal__CloseButton-sc-6pnbfq-10 dJxnvt"
                            data-testid="close-x"
                          />
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexColumn-sc-c3jdxk-4 MultiStepModal__ModalContentWrapper-sc-6pnbfq-11 hEaoMW ckFvxY leZDxE hqHNJt"
              >
                <div
                  data-testid="loading"
                >
                  Loading...
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div />
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;
